Added some files

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "kwuo",
   "version": "1.0.0",
   "description": "",
+  "bin": {
+    "kwuo": "./bin/kwuo"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
