--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "keywords": [],
   "author": "Chidume Nnamdi <kurtwanger40@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chalk": "^2.4.1"
+  },
+  "dependencies": {}
 }
